--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -14,7 +14,7 @@
                 </ul>
 
                 <span class="people-names">
-                  {{mailbox.name}} {{mailbox.surname}}
+                  {{message.author.name}} 
                 </span>
               </div><!-- people -->
 
