structure of folders

--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -1,4 +1,4 @@
-<li class="email-item row unread" (click)="onSelect(mailbox)">
+<li class="email-item row unread" (click)="onSelect(message)">
   
               <div class="people col-sm-3">
                 <ul class="mail-icons list-inline">
