Add inbox, update messageservice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,9 +69,7 @@
           </button>
 
           <ul class="inbox-sections list-unstyled">
-            <li class="active">
-              Inbox (100)
-            </li>
+          <app-inbox></app-inbox>
             <li>Sent Mail</li>
             <li class="pending">
               Drafts (7)
