--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -15,12 +15,13 @@
 
                 <span class="people-names">
                   {{message.author.name}} 
+                  {{message.id}} 
                 </span>
               </div><!-- people -->
              
               <div class="message col-sm-7">
                 <div class="clipper">
-                  <h3>{{message.isRead}}</h3>
+                   {{message.isRead}}
                   <h3>About your pizza</h3>
                   <p>We can't deliver your pizza on time. We will be about 50 minutes late. Is that okay? Let us know because there are a lot of hungry people in the world.</p>
                 </div>
