--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,15 +64,15 @@
 
       <div class="mail row">
         <div class="sidebar col-sm-2">
-          <button class="compose btn btn-danger">
+          <button class="compose btn btn-danger" (click)="createMessage()">
             Compose
           </button>
 
           <ul class="inbox-sections list-unstyled">
           <app-inbox></app-inbox>
             <li>Sent Mail</li>
-            <li class="pending">
-              Drafts (7)
+            <li class="pending" (click)="addressbook()">
+                AddressBook
             </li>
             <li>All Mail</li>
             <li class="pending">
@@ -85,4 +85,5 @@
       <router-outlet>   </router-outlet>
      
       </div><!-- mail -->
+      <!--<app-newmessage></app-newmessage>-->
     </div>
