--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,12 @@
         </div><!-- logo -->
 
         <div class="search-bar col-sm-6">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-main">
-                <span class="glyphicon glyphicon-search"></span>
-              </button>
-            </span>
-          </div><!-- /input-group -->
+          
+            <app-search> </app-search>
+          
+        
 
-          <span class="arrow caret"></span>
+        
         </div><!-- search-bar -->
 
         <div class="profile col-sm-4">
