--- a/src/app/messages/message/message.component.html
+++ b/src/app/messages/message/message.component.html
@@ -15,6 +15,7 @@
 
                 <span class="people-names">
                   {{message.author.name}} 
+                  {{message.sendTo.name}} 
                   {{message.id}} 
                 </span>
               </div><!-- people -->
@@ -22,8 +23,8 @@
               <div class="message col-sm-7">
                 <div class="clipper">
                    {{message.isRead}}
-                  <h3>About your pizza</h3>
-                  <p>We can't deliver your pizza on time. We will be about 50 minutes late. Is that okay? Let us know because there are a lot of hungry people in the world.</p>
+                  <h3> {{message.title}} </h3>
+                  <p>{{message.text}}</p>
                 </div>
               </div><!-- message -->
 
