--- a/src/app/newmessage/newmessage.component.html
+++ b/src/app/newmessage/newmessage.component.html
@@ -2,9 +2,9 @@
  <div class="inbox col-sm-10">
 <form class="form-horizontal" role="form" method="post" >
 	<div class="form-group">
-		<label for="name" class="col-sm-2 control-label">Name</label>
+		<label for="name" class="col-sm-2 control-label">Title</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
+			<input type="text" class="form-control" id="name" name="name" placeholder="Title" value="">
 		</div>
 	</div>
 	<div class="form-group">
