--- a/src/app/contacts/contact/contact.component.html
+++ b/src/app/contacts/contact/contact.component.html
@@ -3,7 +3,7 @@
               <div class="people col-sm-3">
                 <ul class="mail-icons list-inline">
                   <li>
-                    <input type="checkbox" class="mail-select">
+                    <input type="checkbox" class="mail-select" (change) = "check($event)" >
                   </li>
                   <li>
                     <span class="glyphicon glyphicon-star-empty"></span>
