--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,6 @@
  <div class="inbox col-sm-10">
       <ul class="list-unstyled">
-        <app-message *ngFor = "let message of messages | async "  
+        <app-message *ngFor = "let message of messages  "  
                       [message]="message">
           
         </app-message>
