--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
  <div class="container-fluid">
       <header class="row">
         <div class="logo col-sm-2">
-          <img src="public/img/google.png" alt="Google">
+          <a routerLink="">
+            <img src="public/img/google.png" alt="Google">
+          </a>
         </div><!-- logo -->
 
         <div class="search-bar col-sm-6">
@@ -68,7 +70,7 @@
           <app-inbox></app-inbox>
             <li>Sent Mail</li>
             <li class="pending" (click)="addressbook()">
-                AddressBook
+                Contacts
             </li>
             <li>All Mail</li>
             <li class="pending">
