--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,8 +1,9 @@
- <div class="inbox col-sm-10">
+ <div class="inbox col-sm-10" >
       <ul class="list-unstyled">
         <app-contact *ngFor = "let user of users | async"  
-                      [user]="user">
-          
+                      [user]="user"
+                      (onCheck)="createArray($event)">
+                      
         </app-contact>
         <li class="email-item row unread" *ngIf = "form" >
                 <div class="people col-sm-3">
@@ -28,13 +29,16 @@
 
        <div class="form-group">
          		<div class="col-sm-10 col-sm-offset-2">
-			<input id="submit" name="submit" type="submit" value="Удалить" class="btn btn-primary" >
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<input id="submit" name="submit" type="submit" value="Добавить" class="btn btn-primary" (click)="addForm($event)">
-		</div>
-	</div>
+		        	<input id="submit" name="submit" type="submit" value="Удалить" class="btn btn-primary" (click)="deleteUser($event)">
+		       </div>
+    	</div>
+
+      <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-2">
+          <input id="submit" name="submit" type="submit" value="Добавить" class="btn btn-primary" (click)="addForm($event)">
+        </div>
+      </div>
+
+
 	<div class="form-group">
   </div>
