--- a/src/app/newmessage/newmessage.component.html
+++ b/src/app/newmessage/newmessage.component.html
@@ -4,19 +4,19 @@
 	<div class="form-group">
 		<label for="name" class="col-sm-2 control-label">Title</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="name" name="name" placeholder="Title" value="">
+			<input type="text" class="form-control" id="name" name="name" placeholder="Title" value="" [(ngModel)]="currentmessage.name">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="email" class="col-sm-2 control-label">Email</label>
 		<div class="col-sm-10">
-			<input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
+			<input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="" (ngModel)]="">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="message" class="col-sm-2 control-label">Message</label>
 		<div class="col-sm-10">
-			<textarea class="form-control" rows="4" name="message"></textarea>
+			<textarea class="form-control" rows="4" name="message" (ngModel)]="currentmessage.text"></textarea>
 		</div>
 	</div>
 
