--- a/src/app/search/searchresult/searchresult.component.html
+++ b/src/app/search/searchresult/searchresult.component.html
@@ -1,3 +1,42 @@
-<p>
-  searchresult works!
-</p>
+ <div class="inbox col-sm-10">
+      <ul class="list-unstyled">
+
+
+        <li class="email-item row unread" *ngFor = "let search of searchlist |search:word">
+  
+              <div class="people col-sm-3">
+                <ul class="mail-icons list-inline">
+                  <li>
+                    <input type="checkbox" class="mail-select">
+                  </li>
+                  <li>
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                  </li>
+                  <li>
+                    <span class="glyphicon glyphicon-cutlery"></span>
+                  </li>
+                </ul>
+
+                <span class="people-names">
+                  {{search.author.name}} 
+                  {{search.sendTo.name}} 
+                
+                </span>
+              </div><!-- people -->
+             
+              <div class="message col-sm-7">
+                <div class="clipper">
+                   <!--{{message.isRead}}-->
+                  <!--<h3> {{message.title}} </h3>-->
+                  <p> {{search.text}} </p>
+                </div>
+              </div><!-- message -->
+
+              <div class="date col-sm-2">
+                <!--<date class="pull-right">11:27 a.m.</date>-->
+              </div><!-- date -->
+            
+            </li>
+
+      </ul>
+  </div><!--  -->
