add, delete, redact users

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
           <span class="caret"></span>
         </div><!-- menu -->
 
-        <div class="controls col-sm-10">
+        <!--<div class="controls col-sm-10">
           <ul class="control-list list-inline">
             <li>
               <button class="btn btn-control">
@@ -57,7 +57,7 @@
               </button>
             </li>
           </ul>
-        </div><!-- controls -->
+        </div> controls -->
       </div><!-- control-bar -->
 
       <div class="mail row">
