--- a/src/app/mailboxes/mailbox/mailbox.component.html
+++ b/src/app/mailboxes/mailbox/mailbox.component.html
@@ -1,34 +1,36 @@
 <li class="email-item row unread" (click)="onSelect(mailbox)">
   
-              <div class="people col-sm-3">
+              <div class="people col-sm-2">
                 <ul class="mail-icons list-inline">
                   <li>
                     <input type="checkbox" class="mail-select">
                   </li>
-                  <li>
+                  <!--<li>
                     <span class="glyphicon glyphicon-star-empty"></span>
-                  </li>
-                  <li>
+                  </li>-->
+                  <!--<li>
                     <span class="glyphicon glyphicon-cutlery"></span>
-                  </li>
+                  </li>-->
                 </ul>
 
-                <span class="people-names">
-               {{mailbox.user.email}} 
+                <span >
+                  {{mailbox.user.name}} {{mailbox.user.surname}}
+               
                 </span>
               </div><!-- people -->
 
-              <div class="message col-sm-7">
+              <div class="message col-sm-8">
                 <div class="clipper">
                 <!--<h3>About your pizza</h3>-->
-                  {{mailbox.user.name}} {{mailbox.user.surname}}
+                  
                  <!--<p>  {{mailbox.lastMessage}}</p>-->
                   <!--<p>We can't deliver your pizza on time. We will be about 50 minutes late. Is that okay? Let us know because there are a lot of hungry people in the world.</p>-->
-                <p>  {{mailbox.id}}</p>
+                <p>  {{mailbox.lastMessage.text}}</p>
                 </div>
               </div><!-- message -->
 
               <div class="date col-sm-2">
+                {{mailbox.lastMessage.sentAt | date}}
                 <!--<date class="pull-right">11:27 a.m.</date>-->
               </div><!-- date -->
             
