--- a/src/app/newmessage/newmessage.component.html
+++ b/src/app/newmessage/newmessage.component.html
@@ -1,34 +1,50 @@
-
- <div class="inbox col-sm-10">
+<div class="inbox col-sm-6">
 <form class="form-horizontal" role="form" method="post" >
-	<div class="form-group">
-		<label for="name" class="col-sm-2 control-label">Title</label>
-		<div class="col-sm-10">
-			<input type="text" class="form-control" id="name" name="name" placeholder="Title" value="" [(ngModel)]="currentmessage.name">
-		</div>
-	</div>
-	<div class="form-group">
-		<label for="email" class="col-sm-2 control-label">Email</label>
-		<div class="col-sm-10">
-			<input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="" (ngModel)]="">
-		</div>
-	</div>
-	<div class="form-group">
-		<label for="message" class="col-sm-2 control-label">Message</label>
-		<div class="col-sm-10">
-			<textarea class="form-control" rows="4" name="message" (ngModel)]="currentmessage.text"></textarea>
-		</div>
-	</div>
-
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary"  (keydown.enter)="sendmessage($event)"  (click)="sendmessage($event)">
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<!--<! Will be used to display an alert to the user>-->
+ 	<div> 
+		 <div [hidden]="messageAdd == false" class="form-group alert alert-danger">
+            Письмо добавлено
+          </div>
+    	<div class="form-group">
+        	<label for="title"> Title</label>
+            <input class="form-control" id="title" name="title" 
+					[(ngModel)]="currentMessage.title"
+					/>
+        </div>
+        <div class="form-group">
+        	<label for="email"> Email </label>
+            <input class="form-control" id="email" name="email" [(ngModel)]="currentEmail" (keyup)=filter() #email="ngModel" 
+                            required pattern="[a-zA-Z_0-9]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}" />
+			<!--автодополнение-->
+			<div class="suggestions" *ngIf="filteredList.length > 0">
+            	<ul *ngFor="let item of filteredList" >
+                	<li>
+                    	<a (click)="select(item)">{{item}}</a>
+                    </li>
+                </ul>
+        	</div>
+			<!--автодополнение-->
+            
+			<div [hidden]="email.valid || email.untouched" class="alert alert-danger">
+            	Некорректный email
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="message">Message</label>
+			<textarea class="form-control" id="message" name="message" rows="6" 
+							[(ngModel)]="currentMessage.text"  #message="ngModel"  required >
+			</textarea>
+        	<div [hidden]="message.valid || message.untouched" class="alert alert-danger">
+                Введите текст
+            </div>
+        </div>
+        <div class="form-group">
+        	<button [disabled]="email.invalid || message.invalid" 
+					class="btn btn-default" 
+					(keydown.enter)="onSendMessage($event)"  
+					(click)="onSendMessage($event)"> Добавить
+			</button>
 		</div>
 	</div>
 </form>
 </div>
+
