--- a/src/app/contacts/contact/contact.component.html
+++ b/src/app/contacts/contact/contact.component.html
@@ -24,9 +24,8 @@
                <div class="message col-sm-1">
                  <div class="form-group col-sm-12">
      
-        	       	<button  class="btn btn-default" 
-                           (keydown.enter)="onSendMessage($event)" 
-                           (click)="onSendMessage($event)"> Изменить
+        	       	<button class="btn btn-default" 
+                          (click)="changeUser($event)"> Изменить
 			            </button>
                 </div>
           </div>
