--- a/src/app/messages/message/letter/letter.component.html
+++ b/src/app/messages/message/letter/letter.component.html
@@ -1,4 +1,4 @@
-<div class="inbox col-sm-10">
+<div *ngIf = "letter"  class="inbox col-sm-10">
     <ul class="list-unstyled">
       <li class="email-item row unread">
         <div class="people col-sm-2">
