--- a/src/app/mailboxes/mailbox/mailbox.component.html
+++ b/src/app/mailboxes/mailbox/mailbox.component.html
@@ -1,37 +1,20 @@
 <li class="email-item row unread" (click)="onSelect(mailbox)">
-  
-              <div class="people col-sm-2">
-                <ul class="mail-icons list-inline">
-                  <li>
-                    <input type="checkbox" class="mail-select">
-                  </li>
-                  <!--<li>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                  </li>-->
-                  <!--<li>
-                    <span class="glyphicon glyphicon-cutlery"></span>
-                  </li>-->
-                </ul>
-
-                <span >
-                  {{mailbox.user.name}} {{mailbox.user.surname}}
-               
-                </span>
-              </div><!-- people -->
-
-              <div class="message col-sm-8">
-                <div class="clipper">
-                <!--<h3>About your pizza</h3>-->
-                  
-                 <!--<p>  {{mailbox.lastMessage}}</p>-->
-                  <!--<p>We can't deliver your pizza on time. We will be about 50 minutes late. Is that okay? Let us know because there are a lot of hungry people in the world.</p>-->
-                <p>  {{mailbox.lastMessage.text}}</p>
-                </div>
-              </div><!-- message -->
-
-              <div class="date col-sm-2">
-                {{mailbox.lastMessage.sentAt | date}}
-                <!--<date class="pull-right">11:27 a.m.</date>-->
-              </div><!-- date -->
-            
-            </li>
+  <div class="people col-sm-3">
+    <ul class="mail-icons list-inline">
+        <li>
+            <input type="checkbox" class="mail-select">
+        </li>
+    </ul>
+    <span>
+          {{mailbox.user.name}} {{mailbox.user.surname}}
+    </span>
+  </div><!-- people -->
+  <div class="lastmessage col-sm-7">
+    <div class="clipper">
+      <p>{{mailbox.lastMessage.text}}</p>
+    </div>
+  </div><!-- lastmessage -->
+  <div class="date col-sm-2">
+      {{mailbox.lastMessage.sentAt | date}}
+  </div><!-- date -->
+</li>
