--- a/src/app/mailboxes/mailboxes.component.html
+++ b/src/app/mailboxes/mailboxes.component.html
@@ -1,8 +1,8 @@
  <div class="inbox col-sm-10">
       <ul class="list-unstyled">
-        <app-mailbox  *ngFor = "let mailbox of mailboxes    | async " 
+        <app-mailbox  *ngFor = "let mailbox of mailboxes | async " 
                       [mailbox]="mailbox">
           
         </app-mailbox>
       </ul>
-  </div><!-- | search:word -->
+</div>
