--- a/src/app/newmessage/newmessage.component.html
+++ b/src/app/newmessage/newmessage.component.html
@@ -1,21 +1,23 @@
 <div class="inbox col-sm-6">
 <form class="form-horizontal" role="form" method="post" >
  	<div> 
-		 <div [hidden]="messageAdd == false" class="form-group alert alert-danger">
+		 <div [hidden]="!messageAdd" class="form-group alert alert-danger">
             Письмо добавлено
+          </div>
+		  <div [hidden]="!messageToMe" class="form-group alert alert-danger">
+            Вы не можете отправить пиьмо самому себе
           </div>
     	<div class="form-group">
         	<label for="title"> Title</label>
             <input class="form-control" id="title" name="title" 
-					[(ngModel)]="currentMessage.title"
-					/>
+					[(ngModel)]="currentMessage.title">
         </div>
         <div class="form-group">
         	<label for="email"> Email </label>
             <input class="form-control" id="email" name="email" [(ngModel)]="currentEmail" (keyup)=filter() #email="ngModel" 
-                            required pattern="[a-zA-Z_0-9]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}" />
+                            required pattern="[a-zA-Z_0-9]+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}"  />
 			<!--автодополнение-->
-			<div class="suggestions" *ngIf="filteredList.length > 0">
+			<div class="suggestions" *ngIf="filteredList.length > 0 ">
             	<ul *ngFor="let item of filteredList" >
                 	<li>
                     	<a (click)="select(item)">{{item}}</a>
@@ -24,7 +26,7 @@
         	</div>
 			<!--автодополнение-->
             
-			<div [hidden]="email.valid || email.untouched" class="alert alert-danger">
+			<div [hidden]="email.valid || email.untouched " class="alert alert-danger">
             	Некорректный email
             </div>
         </div>
@@ -38,7 +40,7 @@
             </div>
         </div>
         <div class="form-group">
-        	<button [disabled]="email.invalid || message.invalid" 
+        	<button [disabled]="email.invalid || message.invalid " 
 					class="btn btn-default" 
 					(keydown.enter)="onSendMessage($event)"  
 					(click)="onSendMessage($event)"> Добавить
