--- a/src/app/messages/message/letter/letter.component.html
+++ b/src/app/messages/message/letter/letter.component.html
@@ -13,7 +13,7 @@
                 
                   <h3> {{letter.title}}</h3>
                  
-                  <div>{{letter.text}}</div>
+              <br>    <p>{{letter.text}}</p>
                
               </div><!-- message -->
               
@@ -25,4 +25,5 @@
             
             </li>
 </ul>
+<p><a href (click)="back()">Back</a></p>
 </div>
