--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -120,7 +120,7 @@ input.mail-select {
 .email-item {
   padding: 10px 0;
   border-bottom: 1px solid #d0d0d0;
-  background-color: #f3f3f3;
+  background-color: white;
   font-weight: normal;
 }
 
